--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
               <h2 style="text-align: right;" class="mb-4" data-aos="fade-up" data-aos-delay="200">اكتشف رحلتنا وتطلعاتنا المستقبلية نحو الابتكار والنجاح</h2>
 
               <div class="about-info" data-aos="fade-up" data-aos-delay="300">
-                <p>اكتشف كيف طورنا نهجنا الفريد لمواجهة التحديات المعقدة وتقديم خدمة استثنائية في مختلف القطاعات. يعمل فريقنا المتفاني بلا كلل لضمان رضا عملائنا</p>
+                <p>اكتشف كيف طورنا منهجنا الفريد لمواجهة التحديات المعقدة وتقديم خدمة استثنائية في مختلف القطاعات. يعمل فريقنا المتفاني بلا كلل لضمان رضا عملائنا</p>
                 <p>الرمضاء ديجيتال شركة سعودية تقدم حلول تسويق رقمي وتصميم مواقع عصرية</p>
-                <p><span style="color: #0f70ca;font-size: 19px;">رؤيتنا :</span> نكون الخيار الأول للي يدور على نجاح رقمي بالسوق السعودي والخليجي</p>
+                <p><span style="color: #0f70ca;font-size: 19px;">رؤيتنا :</span> نكون الخيار الأول اللي يدور على نجاح رقمي بالسوق السعودي والخليجي</p>
                 <p><span style="color: #0f70ca;font-size: 19px;">رسالتنا :  </span>  نخلي حضورك على الإنترنت قوي، ونوصلك بعملاءك بأسلوب فعّال</p>
             
               </div>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="value-item">
                   <div class="value-icon"><i class="bi bi-check2"></i></div>
-                  <span class="value-text">أسنجابة</span>
+                  <span class="value-text">أستجابة</span>
                 </div>
                 <div class="value-item">
                   <div class="value-icon"><i class="bi bi-check2"></i></div>
@@ -1684,8 +1684,8 @@
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-    <a class="whats-app"href="https://wsend.co/966534939054" target="_blank"><i class="bi bi-telephone"></i></a>
-    <a href="tel:00966534939054" id="fixedWhatsAppIcon" class="wow zoomIn" target="_blank"><i style="font-size: 22px;" class="bi bi-whatsapp"></i></a>
+    <a class="whats-app"href="tel:00966534939054" target="_blank"><i class="bi bi-telephone"></i></a>
+    <a href="https://wsend.co/966534939054" id="fixedWhatsAppIcon" class="wow zoomIn" target="_blank"><i style="font-size: 22px;" class="bi bi-whatsapp"></i></a>
   
   <!-- Preloader -->
   <div id="preloader"></div>
